--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "ts-node-dev --respawn --transpile-only src/index.ts",
 		"start": "node dist/index.js",
-		"build": "prisma generate && tsc"
+		"build": "prisma generate && tsc",
+		"postinstall": "prisma generate"
 	},
 	"prisma": {
 		"seed": "ts-node src/prisma/seed.ts"
