--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,18 @@
-name: Deploy Backend
+- name: Deploy Backend to VPS
+  uses: appleboy/ssh-action@v1.0.3
+  with:
+    host: ${{ secrets.VPS_HOST }}
+    username: ${{ secrets.VPS_USER }}
+    key: ${{ secrets.VPS_SSH_KEY }}
+    script: |
+      echo "${{ secrets.VPS_SSH_KEY }}" | base64 -d > key.pem
+      chmod 600 key.pem
 
-on:
-  push:
-    branches: [main]
+      cd ${{ secrets.VPS_PATH }}
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy Backend to VPS
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            cd ${{ secrets.VPS_PATH }}
+      cd be-guesthouse
+      git pull
+      cd ..
 
-            echo "Updating backend..."
-            cd be-guesthouse
-            git pull
-            cd ..
-
-
-            docker compose build backend
-            docker compose up -d backend
-
-            docker image prune -f
+      docker compose build backend
+      docker compose up -d backend
